[tool.poetry]
name = "dsipts"
version = "2.0.0"
description = "Python library for time series forecasting"
authors = ["Andrea Gobbi <agobbi@fbk.eu"]
readme = "README.md"
packages = [{ include = "dsipts", from = "." }]

[tool.poetry.dependencies]
python = "^3.10,<3.14"
numpy = "<2.1"
aim = "^3.25.1"
scipy = "^1.14.1"
pytorch-lightning = "^1.9.5"
pandas = "^2.2.3"
torchmetrics = "^1.6.0"
lightning_utilities = "^0.11.9"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
hydra-joblib-launcher = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
html-table-parser-python3 = "^0.3.1"
sphinx = "^8.1.3"
sphinx_rtd_theme = "^3.0.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
numba = "^0.60.0"
einops = "^0.8.0"
matplotlib = "^3.9.2"
sphinx_pdj_theme = "^0.5.0"
sphinx_mdinclude = "^0.6.2"
torch = "^2.5.1"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"
google-api-python-client = "^2.153.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
